# Qtnote

ex06_clion/: CMakeLists.txt  main.cpp
ex08_objectTree/: CMakeLists.txt  main.cpp  widget.cpp
ex09_Char/: CMakeLists.txt  main.cpp
exp03_cmake/: CMakeLists.txt
exp03_widget/: exp03_widget.pro  my_img.qrc  widget.cpp  widget.h  widget.ui
exp05_template/: CMakeLists.txt  hello.cpp
exp07_cmake_rcc/: CMakeLists.txt  hello.cpp
exp_04cmake6/: CMakeLists.txt
